Staged Basic Non Unity Dependant Files (Pre SDK)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-Assets/
-Library/
-Logs/
-Packages/
-ProjectSettings/
-Temp/
+[Ll]ibrary/
+[Ll]ogs/
+[Tt]emp/
+[Bb]uild/
+[Bb]uilds/
+[Oo]bj/
+*.apk
+sysinfo.txt
